# protein-visualizer

./: .gitignore  Caddyfile  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  Dockerfile.worker  main.py  pyproject.toml
api/app/: __init__.py  auth.py  db.py  folding.py  jobs.py  sse.py
api/workflows/: activities.py  nvidia_auth.py  worker.py  workflows.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.module.css  page.tsx
web/app/visualize-proteins/: page.tsx
web/components/: ProteinViewer.tsx
web/components/AuthProvider/: AuthProvider.tsx
web/components/CommonProtein/: CommonProtein.module.css  CommonProtein.tsx
web/components/CreateJobModal/: CreateJobModal.module.css  CreateJobModal.tsx
web/components/Hero/: Hero.module.css  Hero.tsx
web/components/JobCanvas/: JobCanvas.module.css  JobCanvas.tsx
web/components/JobsSidebar/: JobsSidebar.module.css  JobsSidebar.tsx
web/components/ProteinViewer/: ProteinViewer.module.css  ProteinViewer.tsx
web/components/Providers/: Providers.tsx
web/components/Section/: Section.tsx
web/components/SignInButton/: SignInButton.module.css  SignInButton.tsx
web/components/StatusBadge/: StatusBadge.module.css  StatusBadge.tsx
web/components/VisualizeWorkspace/: VisualizeWorkspace.module.css  VisualizeWorkspace.tsx
web/components/homepage/CommonProtein/: CommonProtein.module.css  CommonProtein.tsx
web/components/homepage/Section/: Section.module.css  Section.tsx
web/lib/: auth.ts  jobs.ts
