[project]
name = "api"
version = "0.1.0"
description = "APIs for talking to models"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "google-auth>=2.0",
    "gunicorn>=26.0.0",
    "pyjwt>=2.8",
    "requests>=2.34.2",
    "temporalio>=1.29.0",
]
